[package]
name = "weak-cookie-sig"
version = "0.1.0"
authors = ["George Macon <george.macon@gmail.com>"]

[dependencies]
askama = { version="0.7", features=["with-rocket"] }
base64 = "0.9.3"
byteorder = "1.2.6"
error-chain = "0.12.0"
num = "0.2.0"
rocket = "0.3.16"
rocket_codegen = "0.3.16"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
askama = "0.7"
